// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sourcemap usage sourcemap is external 1`] = `
{
  "mappings": ";;;;;;;;;;;;;;;;;;;AAAA;AAAA;AAAA;AAAA;AAAA;;;ACAO,IAAM,YAAY,CAAC,QAAQ,QAAQ,GAAG,MAAM,IAAI,GAAG;;;ADEnD,IAAM,QAAQ,SAAO,UAAU,UAAU,GAAG",
  "names": [],
  "sources": [
    "../../src/index.js",
    "../../src/utils.js",
  ],
  "sourcesContent": [
    "import { addPrefix } from './utils';

export const debug = str => addPrefix('DEBUG:', str);
",
    "export const addPrefix = (prefix, str) => \`\${prefix}:\${str}\`;
",
  ],
  "version": 3,
}
`;

exports[`sourcemap usage sourcemap is true 1`] = `
{
  "mappings": ";;;;;;;;;;;;;;;;;;;AAAA;AAAA;AAAA;AAAA;AAAA;;;ACAO,IAAM,YAAY,CAAC,QAAQ,QAAQ,GAAG,MAAM,IAAI,GAAG;;;ADEnD,IAAM,QAAQ,SAAO,UAAU,UAAU,GAAG",
  "names": [],
  "sources": [
    "../../src/index.js",
    "../../src/utils.js",
  ],
  "sourcesContent": [
    "import { addPrefix } from './utils';

export const debug = str => addPrefix('DEBUG:', str);
",
    "export const addPrefix = (prefix, str) => \`\${prefix}:\${str}\`;
",
  ],
  "version": 3,
}
`;

exports[`sourcemap usage sourcemap with swc 1`] = `
{
  "mappings": ";;;;;;;;;;;;;;;;;;;AAAA;;;;;;;ACAO,IAAMA,YAAY,CAACC,QAAQC,QAAQ,GAAGD,UAAUC;;;ADEhD,IAAMC,QAAQD,SAAOF,UAAU,UAAUE",
  "names": [
    "addPrefix",
    "prefix",
    "str",
    "debug",
  ],
  "sources": [
    "../../src/index.js",
    "../../src/utils.js",
  ],
  "sourcesContent": [
    "import { addPrefix } from './utils';

export const debug = str => addPrefix('DEBUG:', str);
",
    "export const addPrefix = (prefix, str) => \`\${prefix}:\${str}\`;
",
  ],
  "version": 3,
}
`;
